address-input jump fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -738,7 +738,7 @@ img[lazy=loading] {
 .mobile-menu {
   position: fixed;
   width: 300px;
-  height: 100vh;
+  height: 100%;
   overflow-y: scroll;
   /* max-height: 667px; */
   top: 0;
@@ -749,7 +749,7 @@ img[lazy=loading] {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(100px);
   z-index: 5;
-  transition: left .35s;
+  transition: height .35s;
 }
 .mobile-menu_opened {
   left: 0;
@@ -817,6 +817,7 @@ img[lazy=loading] {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  transition: all .35s;
 }
 .mobile-menu__logo {
   font-weight: bold;
@@ -849,6 +850,7 @@ img[lazy=loading] {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  transition: all .35s;
 }
 .mobile-menu__text {
   font-weight: 300;
